2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-doc/Makefile.am:
	* ccss-doc/ccss-docs.sgml:
	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/block.sgml:
	* ccss-doc/tmpl/ccss-unused.sgml:
	* ccss-doc/tmpl/ccss.sgml:
	* ccss-doc/tmpl/ccss_gtk_style_functions.sgml:
	* ccss-doc/tmpl/function.sgml:
	* ccss-doc/tmpl/node.sgml:
	* ccss-doc/tmpl/property.sgml:
	* ccss-doc/tmpl/style.sgml:
	* ccss-doc/tmpl/stylesheet.sgml:
	* ccss-doc/version.xml.in:
	* doc/Makefile.am:
	* doc/ccss-docs.sgml:
	* doc/ccss-sections.txt:
	* doc/tmpl/block.sgml:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/ccss.sgml:
	* doc/tmpl/ccss_gtk_style_functions.sgml:
	* doc/tmpl/function.sgml:
	* doc/tmpl/node.sgml:
	* doc/tmpl/property.sgml:
	* doc/tmpl/style.sgml:
	* doc/tmpl/stylesheet.sgml:
	* doc/version.xml.in:
	Prepare for documentation ccss/ccss-caior split-up.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-image.c (load_image): always require an image uri
	  rather than a path.

2008-11-25  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am: fix ccss-clutter pkg-config file installation.

	* ccss/ccss.sym: export `ccss_style_foreach'.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/Makefile.am: link with correct version info.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am:
	* doc/tmpl/ccss-unused.sgml:
	* doc/tmpl/style.sgml:
	* libccss-1.pc.in:
	* libccss-cairo-1.pc.in:
	Correctly build the standalone libccss-cairo.

2008-11-24  Robert Staudinger  <robsta@gnome.org>

	* Makefile.am:
	* ccss-cairo/Makefile.am:
	* ccss-cairo/ccss-background-parser.c (bg_attachment_parse),
	(bg_image_parse), (bg_position_parse), (bg_repeat_parse),
	(bg_size_parse), (background_factory), (background_attachment_new),
	(background_attachment_convert), (background_image_new),
	(background_image_convert), (background_position_new),
	(background_position_convert), (background_repeat_new),
	(background_repeat_convert), (background_size_new),