@@ -1,0 +1,96 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE book PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+               "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+
+<!ENTITY ccss-cairo			SYSTEM "xml/ccss_cairo.xml">
+
+<!ENTITY TreeIndex			SYSTEM "xml/tree_index.sgml">
+
+]>
+<book id="index">
+  <bookinfo>
+    <title>CCSS/Cairo Reference Manual</title>
+  </bookinfo>
+
+  <part id="intro">
+    <title>CCSS: Introduction</title>
+    <partintro id="ccss-into">
+    <para>
+TODO
+    </para>
+    </partintro>
+  </part>
+
+  <part id="dependencies">
+    <title>CCSS: Dependencies</title>
+    <para>
+CCSS depends on the following libraries:
+<variablelist>
+
+<varlistentry>
+<term><link linkend="glib" title="GLib">GLib</link></term>
+<listitem><para>
+A general-purpose utility library, not specific to graphical user interfaces.
+GLib provides many useful data types, macros, type conversions,
+string utilities, file utilities, a main loop abstraction, and so on.
+</para></listitem>
+</varlistentry>
+
+<varlistentry>
+<term><link linkend="cairo" title="Cairo">Cairo</link></term>
+<listitem><para>
+Cairo is a 2D graphics library with support for multiple output devices. 
+Currently supported output targets include the X Window System, Quartz, Win32, 
+image buffers, PostScript, PDF, and SVG file output. Experimental backends 
+include OpenGL (through glitz), XCB, BeOS, OS/2, and DirectFB.
+</para></listitem>
+</varlistentry>
+
+<varlistentry>
+<term><link linkend="libsoup" title="LibSoup">LibSoup (optional)</link></term>
+<listitem><para>
+LibSoup is an HTTP client/server library for GNOME. It uses GObjects and the glib main loop, to integrate well with GNOME applications. 
+</para></listitem>
+</varlistentry>
+
+</variablelist>
+
+    </para>
+</part>
+
+<part id="ccss-users">
+  <title>Projects using CCSS/Cairo</title>
+  <partintro id="ccss-projects">
+  <para>
+CCSS is used by
+<variablelist>
+<varlistentry>
+<term><ulink url="http://www.gnome.org/~robsta/gtk-css-engine/">Gtk CSS Engine</ulink></term>
+<listitem><para>
+The Gtk CSS Engine
+</para></listitem>
+</varlistentry>
+
+</variablelist>
+
+  </para>
+  </partintro>
+</part>
+
+<part id="api">
+  <title>API Reference</title>
+    <partintro id="ccss-api-ref">
+      <para>
+TODO.
+      </para>
+    </partintro>
+  <chapter id="basic">
+    <title>Basic Usage</title>
+    &ccss_cairo;
+  </chapter>
+ </part>
+<index id="ccss-index">
+&TreeIndex;
+</index>
+</book>
+
